app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
.issue-list-title {
	// padding-bottom: 0px;
	border: none;
	margin-bottom: 1em;
}

.issue-list-title h1 {
	/* padding-bottom: 0.25em; */
	margin-top: 0px;
}

.issue-list-title h2 {
	font-size: @issueTitleH2FontSize;
	line-height: @issueTitleH2FontSize;
	font-weight: normal;
	color: @grayLight;
}

.issue-title {
	padding-bottom: 0px;
	margin-top: 0px;
	border: none;
}

.issue-title h1 {
	padding-top: 0px;
	margin-top: 0px;
}

@issueTitleH2FontSize: 1.2em;

.issue-title h2 {
	font-size: @issueTitleH2FontSize;
	line-height: @issueTitleH2FontSize;
	font-weight: normal;
	color: @grayLight;
}

.issue-cover {
	float: left;
	margin: 0px 20px 20px 0px;
}

// Issue.articles styling

.keynote {
	.border-radius(5px);
	min-height: 200px;
	padding: 1em;
	background-color: @niBrown;
}

.keynote h5 {
	text-transform: uppercase;
}

.issue-articles-container {
	
}

.issue-articles-container h3 {
	margin-bottom: 1em;
}

.issue-article {
	border-bottom: 1px solid @grayLighter;
	padding-bottom: 15px;
	margin-bottom: 20px;
}

.article-search .btn {
	margin-top: -9px;
}

// Issue.editors_letter styling

.editors-letter h3, .issue-articles-container h3 {
	margin-top: 0px;
	padding-top: 0px;
	color: @grayLight;
	line-height: 1em;
}

.editors-photo {
	float: right;
	margin: 0px 0px 10px 10px;
}

// Article styling

.article-title {
	padding-bottom: 0px;
	margin-top: 0px;
	border-bottom: 1px dashed #eeeeee;
}

.article-title h1 {
	/* padding-bottom: 0.25em; */
	margin-top: 0px;
}

.article-title h2 {
	font-weight: 600;
	font-size: 1.2em;
	line-height: 1.3em;
	color: @grayLight;
	/* padding-bottom: 0.75em; */
}

.article-title p {
	color: @grayLight;
}

.article-title .issue-cover {
	float: right;
	margin: 0px 0px 20px 20px;
	margin-top: -40px;
}

#myCarousel {
	.shadow;
}

.carousel-control {
	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.carousel-caption {
	padding: 10px 15px;
}

.article-thumb {
	float: right;
}

// Not used but the zooming on size change was nice.
.article-image-top {
	width: 100%;
	max-height: 400px;
	margin: 0 auto 0 auto;
	overflow: hidden;
	.shadow;
	margin-bottom: 1em;
	background-position-x: 25%;
	background-position-y: 50%;
}

.article-body {
/*
	font-family: @serifFontFamily;
	font-size: 21px;
	line-height: 32px;
*/
	font-size: @articleFontSize;
	line-height: @articleLineHeight;
}

.article-body p {
	margin-bottom: @articleParagraphMargin;
}

.article-source {
	display: none;
	margin-top: 1em;
}

.article-image {
	float: right;
	max-width: 340px;
	margin: 0px 0px 2em 2em;
	font-size: 0.85em;
	color: @gray;
}

.article-image img {
	.shadow;
	margin-bottom: 1em;
}

.new-image-credit {
	margin-top: -3px;
	color: @grayLight;
}

blockquote.pull-right, blockquote.pull-left, blockquote.pull- {
	border-right-style: none;
	border-left-style: none;
	color: @niRed;
	width: 30%;
	float: right;
	text-align: right;
}

blockquote.pull-right p, blockquote.pull-left p, blockquote.pull- p {
	margin-bottom: 0;
	font-weight: bold;
	font-size: 16px;
}

blockquote.pull-right, blockquote.pull- {
	padding: 0px;
	margin: 0px 0px 1em 1em;
}

blockquote.pull-left {
	padding: 0px;
	margin: 0px 1em 1em 0px;
	text-align: left;
	float: left;
}

.footnotes {
	padding: 1em;
	font-size: 0.9em;
	color: @gray;
}

.box {
	background-color: @boxBackgroundColour;
	padding: 1.5em 2em;
	margin: 2em 0 2em 0;
	.border-radius(5px);
}

.author-note {
	font-size: 0.9em;
	color: @gray;
}

.article-favourite {
	margin: -5px 0 0 10px;
}

.star-ratings-previous-year, .star-ratings-previous-year + dd {
	color: @grayLight;
	margin-top: -7px;
	margin-bottom: 20px;
}

/*
.at-a-glance .dl-horizontal dt {
	width: 100px;
}

.at-a-glance .dl-horizontal dd {
	margin-left: 115px;
	margin-bottom: 10px;
}
*/

// PAGE styling (About, Help etc)

.help-list {
	.box;
	background-color:rgba(228, 225, 223, 0.5);
}

.help-body img {
	float: right;
	.shadow;
	margin: 0px 0px 1em 1em;
}

.quick-help {
	float:right;
	.box;
	margin-top: 0px;
}



// Admin Settings

.admin-settings {
	margin-top: 2em;
}

.admin-settings label {
	font-size: 1.3em;
	font-weight: bold;
	color: @gray;
	padding-bottom: 5px;
}

.admin-settings .btn {
	margin-top: -9px;
}



//=============
// @media fixes
//=============


/* Landscape phones and down */
@media (max-width: 480px) {
	.user_nav {
		position: relative;
		top: 0px;
	}
	.article-image {
		width: 100%;
	}
	
	.hero-unit {
		padding: 10px 20px 20px 20px;
	}
	
	.quick-help {
		float: none;
		width: auto;
	}
	
	.marketing-subscribe {
		float: none;
		margin-top: 20px;
		width: auto;
	}
	.dl-horizontal dt {
		float: left;
		margin-right: 10px;
	}
	.dl-horizontal dd {
		margin-top: 2px;
	}
	.star-ratings-previous-year + dd {
		margin-top: -7px;
	}
	.issue-cover-list img, .home-cover-list img {
		width: 42%;
		height: auto;
	}
}
 
/* Landscape phone to portrait tablet */
@media (max-width: 767px) {
	.user_nav {
		position: relative;
		top: 0px;
	}
	.article-title .issue-cover {
		margin-top: 0px;
	}
	.issue-search {
		float: none;
		margin-top: 0px;
	}
	.hero-unit {
		padding: 10px 20px 20px 20px;
	}
	.dl-horizontal dt {
		float: left;
		margin-right: 10px;
	}
	.dl-horizontal dd {
		margin-top: 2px;
	}
	.star-ratings-previous-year {
		margin-top: 0px;
	}
}
 
/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) and (max-width: 979px) {
	.user_nav {
		position: relative;
		top: 0px;
	}
	.article-title .issue-cover {
		margin-top: 0px;
	}
	.issue-list-title h2 {
		width: 445px;
	}
	.issue-search {
		margin-top: -70px;
	}
	.dl-horizontal dt {
		float: left;
		margin-right: 10px;
	}
	.dl-horizontal dd {
		margin-top: 2px;
	}
	.star-ratings-previous-year + dd {
		margin-top: -7px;
	}
}
/* ... */

